# works-logue

./: .gitignore  CLAUDE.md  package-lock.json  package.json
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  database.py  dependencies.py  dependencies_admin.py  main.py
apps/api/app/infra/: vertex_ai_client.py
apps/api/app/middleware/: __init__.py  request_id.py
apps/api/app/models/: __init__.py  ai_config.py  app_setting.py  base.py  follow.py  log.py  notification.py  planter.py  planter_view.py  score.py  seed_type.py  tag.py  user.py
apps/api/app/pipelines/: score_pipeline.py
apps/api/app/repositories/: admin_repository.py  follow_repository.py  insight_repository.py  log_repository.py  planter_repository.py  score_repository.py  settings_repository.py  tag_repository.py  user_repository.py
apps/api/app/routers/: admin.py  contributors.py  logs.py  planters.py  scores.py  search.py  seed_types.py  stats.py  tags.py  users.py
apps/api/app/schemas/: admin.py  contributor.py  log.py  planter.py  score.py  seed_type.py  tag.py  user.py
apps/api/app/services/: ai_facilitator.py  feed_ranker.py  insight_calculator.py  louge_generator.py  score_engine.py  storage_client.py  supabase_auth.py
apps/api/app/tests/: conftest.py  test_admin_middleware.py  test_admin_repository.py  test_admin_router.py  test_ai_facilitator.py  test_auth_middleware.py  test_ban_guard_contract.py  test_contributors.py  test_feed_ranker.py  test_follow_repository.py  test_health.py  test_insight_calculator.py  test_logs.py  (+22 more)
apps/api/scripts/: seed_test_data.sql
(+169 files in other folders)
